<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="47sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            style="@style/StyledButton"
            android:id="@+id/btn_learn_mode"
            android:layout_width="match_parent"
            android:text="@string/learn_morse_code"
            android:drawableLeft="@drawable/icon_brain"
            android:drawablePadding="10dp"
            android:layout_marginBottom="20dp"/>

        <Button
            style="@style/StyledButton"
            android:id="@+id/btn_write_mode"
            android:layout_width="match_parent"
            android:text="@string/write_morse_code"
            android:drawableLeft="@drawable/icon_write"
            android:drawablePadding="10dp"
            android:layout_marginBottom="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageButton
                style="@style/SmallImageButtonStyle"
                android:id="@+id/btn_about"
                android:src="@drawable/icon_info"
                android:layout_marginRight="10dp"
                android:scaleType="fitCenter"/>

            <ImageButton
                style="@style/SmallImageButtonStyle"
                android:id="@+id/btn_settings"
                android:src="@drawable/icon_setting"
                android:scaleType="fitCenter"/>
        </LinearLayout>


    </LinearLayout>
</LinearLayout>